// Complex Database Schema Example
// Tests MANY_TO_MANY detection from junction tables

Table users {
  id int [pk, increment]
  username varchar(255) [not null, unique]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  created_at timestamp [not null]
  updated_at timestamp
}

Table roles {
  id int [pk, increment]
  name varchar(100) [not null, unique]
  description text
  created_at timestamp [not null]
}

// Junction table: MANY_TO_MANY between users and roles
Table user_roles {
  user_id int [pk]
  role_id int [pk]
  assigned_at timestamp [not null]
  assigned_by int
}

Table posts {
  id int [pk, increment]
  user_id int [not null]
  category_id int
  title varchar(255) [not null]
  content text
  status varchar(50) [not null]
  published_at timestamp
  created_at timestamp [not null]
  updated_at timestamp
}

Table categories {
  id int [pk, increment]
  name varchar(100) [not null, unique]
  slug varchar(100) [not null, unique]
  description text
  parent_id int
  created_at timestamp [not null]
}

Table tags {
  id int [pk, increment]
  name varchar(100) [not null, unique]
  slug varchar(100) [not null, unique]
  description text
  created_at timestamp [not null]
}

// Junction table: MANY_TO_MANY between posts and tags
Table post_tags {
  post_id int [pk]
  tag_id int [pk]
  created_at timestamp [not null]
}

Table comments {
  id int [pk, increment]
  post_id int [not null]
  user_id int [not null]
  parent_id int
  content text [not null]
  status varchar(50) [not null]
  created_at timestamp [not null]
  updated_at timestamp
}

Table likes {
  id int [pk, increment]
  user_id int [not null]
  post_id int
  comment_id int
  created_at timestamp [not null]
}

Table media {
  id int [pk, increment]
  post_id int
  user_id int [not null]
  filename varchar(255) [not null]
  file_type varchar(50) [not null]
  file_size int [not null]
  url varchar(500) [not null]
  created_at timestamp [not null]
}

Table subscriptions {
  id int [pk, increment]
  user_id int [not null]
  category_id int [not null]
  notification_preferences json
  created_at timestamp [not null]
  expires_at timestamp
}

// Relationships
Ref: user_roles.user_id > users.id
Ref: user_roles.role_id > roles.id
Ref: posts.user_id > users.id
Ref: posts.category_id > categories.id
Ref: categories.parent_id > categories.id
Ref: categories.parent_id > categories.id
Ref: post_tags.post_id > posts.id
Ref: post_tags.tag_id > tags.id
Ref: comments.post_id > posts.id
Ref: comments.user_id > users.id
Ref: comments.parent_id > comments.id
Ref: likes.user_id > users.id
Ref: likes.post_id > posts.id
Ref: likes.comment_id > comments.id
Ref: media.post_id > posts.id
Ref: media.user_id > users.id
Ref: subscriptions.user_id > users.id
Ref: subscriptions.category_id > categories.id

